<resources>
    <string name="app_name">Lion Games</string>
    <string name="loading_logo_description">Lion Games</string>

    <string name="login_welcome_text">С возвращением!</string>
    <string name="login_title">Войти</string>
    <string name="login_login_hint">Логин</string>
    <string name="login_pass_hint">Пароль</string>
    <string name="login_action_button">Продолжить</string>
    <string name="login_bottom_text"><![CDATA[Забыли пароль? >]]></string>
    <string name="login_bottom_link">Восстановить пароль</string>

    <string name="main_logo_description">Lion Games</string>
    <string name="main_welcome_text">Добро пожаловать!</string>
    <string name="main_button_enter">Войдите в аккаунт</string>
    <string name="main_button_regitration">Зарегистрироваться</string>

    <string name="reg_welcome_text">Создайте аккаунт</string>
    <string name="reg_title">Зарегистрируйтесь</string>
    <string name="reg_login_hint">Логин или email</string>
    <string name="reg_pass_hint">Пароль</string>
    <string name="reg_bottom_text">Уже есть аккаунт?</string>
    <string name="reg_bottom_link">Вернуться назад</string>

    <string name="recover_welcome_text">Восстановление пароля</string>
    <string name="recover_instruction_text">Пожалуйста, введите логин или эл. почту, на которые был зарегистрирован аккаунт</string>
    <string name="reсover_bottom_link">Вернуться назад</string>
    <string name="recover_action_button">Отправить</string>

    <string name="recoverok_action_button">Вернуться</string>
    <string name="recoverok_status_text">Пароль отправлен</string>
    <string name="recoverok_instruction_text">Проверьте электронную почту</string>

    <string name="patch_text">Упс… Экран в разработке</string>
</resources>