<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainscroll"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="450dp"
        >

        <LinearLayout
            android:id="@+id/signin_formfields"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/mainscroll"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:textSize="32sp"
                android:text="@string/login_welcome_text"
                android:textColor="#FEFEFE"

                android:fontFamily="@font/opensans_bold"
                />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"

                android:contentDescription="@string/loading_logo_description"
                android:maxWidth="252dp"
                android:maxHeight="311dp"
                android:scaleType="fitStart"

                android:src="@drawable/logo_lion_games_sign2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:textSize="17sp"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:fontFamily="@font/opensans_bold"
                />
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="49dp"

                android:autofillHints="emailAddress"
                android:hint="@string/login_login_hint"
                android:background="@drawable/rounded_field1"
                android:drawableStart="@drawable/login_icon"

                android:inputType="textEmailAddress"
                android:minHeight="71dp"
                android:paddingHorizontal="33dp"
                android:drawablePadding="22dp"
                android:textColor="@color/darkblue"

                android:textColorHint="@color/darkblue"
                android:textSize="16sp"
                 />
            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:autofillHints="password"
                android:hint="@string/login_pass_hint"
                android:background="@drawable/rounded_field2"
                android:drawableStart="@drawable/login_pass_icon"

                android:inputType="textPassword"
                android:minHeight="71dp"
                android:paddingHorizontal="33dp"
                android:drawablePadding="22dp"
                android:textColor="@color/white"

                android:textColorHint="@color/white"
                android:textSize="16sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_continue"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:layout_marginTop="34dp"

                android:text="@string/login_action_button"
                android:textColor="@color/darkblue"
                android:textAllCaps="false"
                android:fontFamily="@font/opensans_bold"

                android:background="@drawable/rounded_button_white"
                android:gravity="center"
                android:layout_gravity="center"
                android:drawablePadding="18dp"

                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:elegantTextHeight="true"

                android:paddingLeft="32dp"
                android:paddingRight="32dp"

                android:onClick="doLogin"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="34dp"
                android:layout_weight="300"
                />
            <LinearLayout
                android:id="@+id/signin_formbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="62dp"

                android:layout_gravity="bottom"
                android:gravity="center"

                android:orientation="horizontal"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="450dp"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:ellipsize="marquee"
                    android:textSize="17sp"
                    android:text="@string/login_bottom_text"
                    android:textColor="@color/white"

                    android:fontFamily="@font/droidsans"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bottom_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:ellipsize="marquee"
                    android:textSize="17sp"

                    android:text="@string/login_bottom_link"
                    android:textColor="@color/mint"
                    android:fontFamily="@font/opensans_bold"
                    android:onClick="toRecoverPassword"
                    />

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>