<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_recover"
    tools:context=".RecoverOkActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainscroll"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="450dp"
        >

        <LinearLayout
            android:id="@+id/signin_formfields"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/mainscroll"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:textSize="32sp"
                android:text="@string/recover_welcome_text"
                android:textColor="@color/white"

                android:fontFamily="@font/opensans_bold"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="34dp"
                android:layout_weight="300"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_gravity="center"

                android:textSize="24sp"
                android:text="@string/recoverok_status_text"
                android:textColor="@color/white"
                android:fontFamily="@font/opensans_bold"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:layout_gravity="center"

                android:textSize="16sp"
                android:text="@string/recoverok_instruction_text"
                android:textColor="@color/white"
                android:fontFamily="@font/droidsans"
                />
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"

                android:contentDescription="@string/loading_logo_description"
                android:maxHeight="306dp"
                android:maxWidth="308dp"
                android:scaleType="fitStart"
                android:src="@drawable/recover_big_ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_continue"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:layout_marginTop="40dp"

                android:text="@string/recoverok_action_button"
                android:textColor="@color/darkblue"
                android:textAllCaps="false"
                android:fontFamily="@font/opensans_bold"

                android:background="@drawable/rounded_button_white"
                android:gravity="center"
                android:layout_gravity="center"
                android:drawablePadding="18dp"

                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:elegantTextHeight="true"

                android:paddingLeft="32dp"
                android:paddingRight="32dp"

                android:onClick="toLogin"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="34dp"
                android:layout_weight="300"
                />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>