<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".RegActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainscroll"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="450dp"
        >

        <LinearLayout
            android:id="@+id/signin_formfields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/mainscroll"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            android:paddingTop="65dp"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:textSize="32sp"
                android:text="@string/reg_welcome_text"
                android:textColor="@color/white"
                android:fontFamily="@font/opensans_bold"
                />
            <Space
                android:id="@+id/topspace"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="300"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:ellipsize="marquee"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/reg_title"
                android:textColor="@color/white"
                android:textSize="17sp" />
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"

                android:autofillHints="emailAddress"
                android:hint="@string/login_login_hint"
                android:background="@drawable/rounded_field1"
                android:drawableStart="@drawable/login_icon"

                android:inputType="textEmailAddress"
                android:minHeight="66dp"
                android:paddingHorizontal="33dp"
                android:drawablePadding="22dp"
                android:textColor="@color/darkblue"

                android:textColorHint="@color/darkblue"
                android:textSize="16sp"
                 />
            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"

                android:autofillHints="password"
                android:hint="@string/login_pass_hint"
                android:background="@drawable/rounded_field_transparent"
                android:drawableStart="@drawable/login_pass_icon"

                android:inputType="textPassword"
                android:minHeight="66dp"
                android:paddingHorizontal="33dp"
                android:drawablePadding="22dp"
                android:textColor="@color/white"

                android:textColorHint="@color/white"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/login_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"

                android:autofillHints="password"
                android:hint="@string/login_pass_hint"
                android:background="@drawable/rounded_field2"
                android:backgroundTint="@color/lightblue"
                android:drawableStart="@drawable/login_pass_icon"

                android:inputType="textPassword"
                android:minHeight="66dp"
                android:paddingHorizontal="33dp"
                android:drawablePadding="22dp"
                android:textColor="@color/white"

                android:textColorHint="@color/white"
                android:textSize="16sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_continue"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:layout_marginTop="30dp"

                android:text="@string/login_action_button"
                android:textColor="@color/darkblue"
                android:textAllCaps="false"
                android:fontFamily="@font/opensans_bold"

                android:background="@drawable/rounded_button_white"
                android:gravity="center"
                android:layout_gravity="center"
                android:drawablePadding="18dp"

                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:elegantTextHeight="true"

                android:paddingLeft="32dp"
                android:paddingRight="32dp"

                android:onClick="doRegistration"
                />
            <Space
                android:id="@+id/bottomspace"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="300"
                />
            <LinearLayout
                android:id="@+id/signin_formbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="62dp"

                android:layout_gravity="bottom"
                android:gravity="center"

                android:orientation="horizontal"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="450dp"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:ellipsize="marquee"
                    android:textSize="17sp"
                    android:text="@string/reg_bottom_text"
                    android:textColor="@color/white"

                    android:fontFamily="@font/droidsans"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bottom_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/droidsans"
                    android:gravity="center"
                    android:maxLines="1"

                    android:onClick="toMain"
                    android:text="@string/reg_bottom_link"
                    android:textColor="@color/lightblue"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>