<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainscroll"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="450dp"
        >

        <LinearLayout
            android:id="@+id/signin_formfields"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/mainscroll"
            android:orientation="vertical"

            android:layout_marginHorizontal="30dp"


            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:gravity="center"

                android:text="@string/main_welcome_text"
                android:textColor="#FEFEFE"
                android:textSize="32sp"
                android:fontFamily="@font/opensans_bold"
                />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="112dp"
                android:layout_height="138dp"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="76dp"

                android:contentDescription="@string/loading_logo_description"
                android:scaleType="fitCenter"

                android:src="@drawable/logo_lion_games_sign"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                />
            <LinearLayout
                android:id="@+id/signin_formbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"

                android:layout_gravity="bottom"

                android:orientation="vertical"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="450dp"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:minHeight="76dp"
                    android:layout_marginBottom="16dp"

                    android:text="@string/main_button_enter"
                    android:textColor="@color/white"
                    android:textAllCaps="false"

                    android:drawableStart="@drawable/person_24px_1"
                    android:background="@drawable/rounded_button1"
                    android:gravity="start|center_vertical"
                    android:drawablePadding="18dp"

                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="16sp"
                    android:autoSizeMinTextSize="10sp"
                    android:elegantTextHeight="true"

                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"

                    android:onClick="toLogin"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:minHeight="80dp"

                    android:text="@string/main_button_regitration"
                    android:textColor="@color/white"
                    android:textAllCaps="false"

                    android:drawableStart="@drawable/how_to_reg_24px_1"
                    android:background="@drawable/rounded_button2"
                    android:gravity="start|center_vertical"
                    android:drawablePadding="18dp"

                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="16sp"
                    android:autoSizeMinTextSize="10sp"
                    android:elegantTextHeight="true"

                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"

                    android:onClick="toRegistragion"
                    />


            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>